# TEC-VI-EP-IS

./: README.md
EP/: Cargo.toml
EP/src/: auxfunctions.rs  ep_data.rs  main.rs
IS/: Cargo.toml
IS/src/: main.rs
