[package]
name = "IS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big-rational-str = "0.1.6"
bigdecimal = "0.3.0"
rust_decimal = "1.8.0"
rand = "0.8"
num = "0.4.0"
num-rational = "0.4.1"
ordered-float = "3.6.0"
